--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,6 +50,10 @@ a {
   font-weight: 600;
 }
 
+.pac-container {
+  z-index: 10000 !important;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
