--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,7 +40,7 @@ a {
 }
 
 .leaflet-popup-content button {
-  margin-top: 10px;
+  margin-top: 5px;
   padding: 10px;
   width: 100%;
   text-align: center;
@@ -48,6 +48,7 @@ a {
   color: #fff;
   font-size: 15px;
   font-weight: 600;
+  border-radius: 5px;
 }
 
 .pac-container {
